<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2sX-I9-Ftl">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Navigation Controller-->
        <scene sceneID="l0E-aC-T7S">
            <objects>
                <navigationController id="2sX-I9-Ftl" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="M0C-ip-iOa">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="kWS-If-gay"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="BpB-Bn-rmm" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-588" y="134"/>
        </scene>
        <!--Stock Quotes-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="SQListViewController" id="BYZ-38-t0r" customClass="SQListViewController" customModule="StockQuote" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="otT-Kd-aut" userLabel="ListTableView">
                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="SQCompanyCell" textLabel="iFU-Xp-RvA" detailTextLabel="gZd-jL-ynG" style="IBUITableViewCellStyleSubtitle" id="RQo-kH-khX" customClass="SQCompanyCell" customModule="StockQuote" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RQo-kH-khX" id="Len-fQ-B0P">
                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iFU-Xp-RvA">
                                                    <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gZd-jL-ynG">
                                                    <rect key="frame" x="15" y="25.5" width="33" height="14.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ListTableView"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="eBp-xN-p5g"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="uYO-RJ-F0Y"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="otT-Kd-aut" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="1A2-as-wec"/>
                            <constraint firstItem="otT-Kd-aut" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LSf-Ki-GVk"/>
                            <constraint firstItem="otT-Kd-aut" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="eht-vm-DnE"/>
                            <constraint firstItem="otT-Kd-aut" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="fov-1K-cD6"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Stock Quotes" id="IPe-JT-wWh"/>
                    <connections>
                        <outlet property="contentTableView" destination="otT-Kd-aut" id="cSA-Lk-qnz"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
        </scene>
        <!--Detail View Controller-->
        <scene sceneID="76Z-cv-8dP">
            <objects>
                <viewController storyboardIdentifier="SQDetailViewController" id="UQR-cc-1b8" customClass="SQDetailViewController" customModule="StockQuote" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="mce-I4-pqk">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="DetailTableView" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="zqn-3r-qOC">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="DetailTableView"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="UQR-cc-1b8" id="NNg-6i-UR1"/>
                                    <outlet property="delegate" destination="UQR-cc-1b8" id="mng-Bp-Wln"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="zqn-3r-qOC" firstAttribute="trailing" secondItem="Oca-ap-W49" secondAttribute="trailing" id="CeS-FE-rwW"/>
                            <constraint firstItem="zqn-3r-qOC" firstAttribute="top" secondItem="mce-I4-pqk" secondAttribute="top" id="MdI-gh-G2P"/>
                            <constraint firstItem="zqn-3r-qOC" firstAttribute="leading" secondItem="Oca-ap-W49" secondAttribute="leading" id="P9q-R6-OD8"/>
                            <constraint firstItem="zqn-3r-qOC" firstAttribute="bottom" secondItem="Oca-ap-W49" secondAttribute="bottom" id="ahj-hh-0n5"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Oca-ap-W49"/>
                    </view>
                    <connections>
                        <outlet property="contentTableView" destination="zqn-3r-qOC" id="6sb-rE-KeN"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="8FZ-nm-INh" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="831" y="134"/>
        </scene>
    </scenes>
</document>
